Various UI tweaks Code view wraps (fixes #4) Auto-scroll of logs (fixes #3)

--- a/webapp/src/scss/index.scss
+++ b/webapp/src/scss/index.scss
@@ -27,3 +27,15 @@
 .field_value {
   color: #666666;
 }
+
+pre {
+  white-space: pre-wrap;       /* css-3 */
+  white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+  white-space: -o-pre-wrap;    /* Opera 7 */
+  word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
+
+.log {
+  background-color: #333333;
+  color: #eeeeee;
+}
